# trash-can

./: ;  Cargo.toml
assets/: map.txt
assets/models/: bgun.glb  bgun.gltf  scraper.glb  untitled.glb
assets/raw/: bgun.bbmodel  scraper.blend  scraper.blend1  untitled.blend  untitled.blend1
src/: main.rs  utils.rs
src/plugins/debug/: __mod.rs  mod.rs
src/plugins/game/: mod.rs
src/plugins/game/systems/: mod.rs  movement.rs  setup.rs  shooting.rs  update.rs
src/utils/: components.rs  macros.rs  map_generator.rs  resources.rs  run_conditions.rs
